# ccds_example

./: .env.example  .pre-commit-config.yaml  .s3cmd  Makefile  Pipfile  README.md  docker-compose.yaml  install_s3cmd.sh  iris-svc-parameters.yaml  mypy.ini  pyproject.toml  requirements.txt  run_pipeline.sh
ccds_example/: __init__.py  calculate_average.py  dataset.py  features.py  plots.py
ccds_example/modeling/: predict.py  train.py
src/data/: clean_cpu_data.py  train_iris.py
src/data/shell/: download_cpu_data.sh  download_data.sh  process_cpu_data.sh  upload_cpu_data.sh  upload_data.sh
