[tool.poetry]
name = "ccds-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "24.8.0"
flake8 = "5.0.4"
mypy = "1.11.2"
isort = "5.13.2"
pre-commit = "3.5.0"
python-dotenv = "1.0.1"
pandas = "2.0.3"
s3cmd = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
